docs: fill Phase 1 gaps across all core notes
- 01-java-core: add equals/hashCode/compareTo, defensive copy,
  custom collectors, Specification, Strategy, Null Object patterns
- 02-solid: remove misplaced Stream content, add extension point
  design, subtype contract depth, interface ownership, SOLID connections
- 03-modern-java: add Record serialization, sealed state machine,
  bounded polymorphism, Pattern Matching section, CompletableFuture
  critique, cancellation semantics, State/Pipeline/Bulkhead patterns
- 04-jvm-memory: add visibility vs atomicity, Metaspace classloader
  leak, Shenandoah GC, STW triggers, pause time targets, allocation
  rate, object pooling anti-pattern, Flyweight pattern
- 05-thread-management: add thread lifecycle, deadlock triad,
  starvation, ThreadLocal + ScopedValue, backpressure strategies,
  Producer-Consumer pattern, Bulkhead pattern